[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
dotenv = "0.15"
argon2 = "0.4"
jsonwebtoken = "8"
futures = "0.3"
uuid = "1"
bcrypt = "0.12"